# aplicacion

./: .profile  Dockerfile  docker-compose.yml  pyproject.toml  startup.sh
alembic/: env.py
alembic/versions/: 654b2de426f8_create_table_user.py  919b4daf5d8b_create_place_table.py  a7c7c963f348_create_place_table.py
app/: __init__.py  main.py
app/api/: api.py  deps.py
app/api/endpoints/: auth.py  places.py
app/core/: __init__.py  config.py  security.py
app/crud/: crud_place.py  crud_user.py  places.py
app/database/: base.py  base_class.py  sessions.py
app/models/: place.py  user.py
app/schemas/: place.py  token.py  user.py
