[tool.poetry]
name = "fastapi-crud"
version = "0.1.0"
description = "prueba"
authors = ["Daniel Alvarado <danielalvaradora@unimagdalena.edu.co>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.70.0"
uvicorn = {extras = ["standard"], version = "^0.16.0"}
psycopg2 = "^2.9.2"
SQLAlchemy = "^1.4.27"
alembic = "^1.7.5"
PyJWT = "^2.3.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = "^3.3.0"
python-multipart = "^0.0.5"
pydantic = {extras = ["email"], version = "^1.8.2"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
